Renders search results for album and song search

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <header>
       <h1>Search Music</h1>
-      <form>
+      <form class="js-form">
         <div>
           <input type="text" placeholder="Enter a song" class="js-input-field"/>
           <button value="submit" type="submit" class="js-submit-button">
@@ -47,7 +47,8 @@
       </form>
     </header>
     <main>
-      <article></article>
+      <h1 class="js-main-heading">New Releases</h1>
+      <article class="js-main-article"></article>
     </main>
   </body>
 </html>
