Adds search result modal with styling for album results

--- a/index.html
+++ b/index.html
@@ -50,5 +50,12 @@
       <h1 class="js-main-heading">New Releases</h1>
       <article class="js-main-article"></article>
     </main>
+    <dialog class="js-modal">
+      <div class="js-x-button">
+        <i class="fa-solid fa-x"></i>
+      </div>
+      <section class="js-modal-section"></section>
+      <ul class="js-modal-tracks"><ul>
+    </dialog>
   </body>
 </html>
