Removes checked from radio input to allow for errors and adds begining of error handling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </button>
         </div>
         <div>
-          <input type="radio" value="track" id="track" name="quiry-type" class="js-radio" checked/>
+          <input type="radio" value="track" id="track" name="quiry-type" class="js-radio"/>
           <label for="track">Song</label>
           <input type="radio" value="album" id="album" name="quiry-type" class="js-radio"/>
           <label for="album">Album</label>
